# thesauromatic

./: .bumpversion.cfg  .gitignore  Cargo.toml  Makefile  README.md  README.rst  build.rs  dub.json  google-books-common-words-lower.csv  words.txt
.github/workflows/: release-packaging.yaml  test.yaml
pycrate/: Cargo.toml  pyproject.toml
pycrate/src/: lib.rs
source/: app.d
src/: lib.rs  main.rs  python_module.rs
