[package]
name = "thesauromatic"
version = "0.0.7"
edition = "2021"
licence = "AGPL-3.0"
licence-file = "LICENCE"
description = """
thesauromatic is a command-line thesaurus that returns
related words when given a word. The output words are
one per line, making it easy to process in shell
pipelines.
"""
homepage = "https://github.com/cjrh/thesauromatic"
documentation = "https://github.com/cjrh/thesauromatic"
repository = "https://github.com/cjrh/thesauromatic"
readme = "README.md"
keywords = ["thesaurus", "synonyms", "nlp", "natural language"]
categories = [
    "text-processing",
]
exclude = [
    "google-books-common-words-lower.csv",
    "words.txt"
]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0.0"
phf = "0.10.0"
toml = "0.5.8"

[build-dependencies]
phf_codegen = "0.10.0"
